Bug 1827137 - Allow overriding CSD support with GTK_CSD=0, so that gtk3-nocsd keeps working. r=stransky

I don't think there's a particularly nicer/easier way of doing this,
wdyt?

Differential Revision: https://phabricator.services.mozilla.com/D175061